# rust-lang-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  bacon.toml
src/: ERROR.md  error.rs  indexer.rs  main.rs  server.rs  sources.rs
src/parsing/: PARSING.md  markdown.rs  mod.rs
src/search/: SEARCH.md  embeddings.rs  hybrid.rs  index.rs  mod.rs  vector_index.rs
