[package]
name = "rust-lang-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
# MCP SDK
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Search
tantivy = "0.22"

# Semantic search / embeddings
ort = "2.0.0-rc.10"
tokenizers = "0.21"
ndarray = "0.16"
hnsw_rs = "0.3"

# HTTP client for model download
ureq = "2"

# Git operations for auto-cloning docs
git2 = "0.19"

# Markdown parsing
pulldown-cmark = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
